# CDMASimulator

./: .gitignore  CMakeLists.txt  README.md
data/: goldSequences.txt  proposedSequences.txt
src/: Channel.cpp  Channel.hpp  Sequences.cpp  Sequences.hpp  SimulationSet.cpp  SimulationSet.hpp  User.cpp  User.hpp  main.cpp
